SMTInterpol: `SmtInterpolProofNodeCreator` creates a provitional proof node for processing the proof terms. Renamed `getResAxiomRuleByName` to `getFromName` in `ResProofRule`